Bug 1404385 - Don't copy if not needed for whitespace removal. r=smaug
UltraBlame original commit: 0efa71a9a60ac4373222b58d5750b453e7bd7318

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -442,9 +442,6 @@ js
 file_bug692434
 .
 xml
-file_bug704320_preload_attr
-.
-html
 file_bug704320_preload_common
 .
 js
@@ -2972,6 +2969,11 @@ html
 ]
 [
 test_bug1399605
+.
+html
+]
+[
+test_bug1404385
 .
 html
 ]
