--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -32,9 +32,6 @@ html
 file_nonascii_blob_url
 .
 html
-fileutils
-.
-js
 fileapi_chromeScript
 .
 js
@@ -109,6 +106,28 @@ html
 ]
 [
 test_fileapi_slice
+.
+html
+]
+skip
+-
+if
+=
+(
+toolkit
+=
+=
+'
+android
+'
+)
+#
+Android
+:
+Bug
+775227
+[
+test_fileapi_slice_image
 .
 html
 ]
