Bug 1400098 - Using common_fileReader.js for test_fileapi in workers, r=qdot
UltraBlame original commit: 7d032e676aefc4b9f6f8f54a7179e75adaffd1aa

--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -11,6 +11,9 @@ js
 create_file_objects
 .
 js
+common_fileReader
+.
+js
 file_blobURL_expiring
 .
 html
@@ -104,11 +107,16 @@ test_fileapi
 .
 html
 ]
+[
+test_fileapi_worker
+.
+html
+]
 support
 -
 files
 =
-common_fileReader
+worker_fileReader
 .
 js
 [
