Bug 1305230 - Splitting test_fileapi.html and test_fileapi_worker.html in multiple files, r=me
UltraBlame original commit: e81517c2358cb5794de1ebd07d6a9eb1677be61e

--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -38,6 +38,9 @@ html
 fileapi_chromeScript
 .
 js
+worker_fileReader
+.
+js
 !
 /
 dom
@@ -103,22 +106,45 @@ test_file_negative_date
 html
 ]
 [
-test_fileapi
+test_fileapi_basic
 .
 html
 ]
 [
-test_fileapi_worker
+test_fileapi_encoding
 .
 html
 ]
-support
--
-files
-=
-worker_fileReader
+[
+test_fileapi_twice
 .
-js
+html
+]
+[
+test_fileapi_other
+.
+html
+]
+[
+test_fileapi_basic_worker
+.
+html
+]
+[
+test_fileapi_encoding_worker
+.
+html
+]
+[
+test_fileapi_twice_worker
+.
+html
+]
+[
+test_fileapi_other_worker
+.
+html
+]
 [
 test_fileapi_slice_realFile_1
 .
