Bug 1409203 - disable dom/media/tests/mochitest/test_peerConnection_videoCodecs.html on Android, r=gbrown
UltraBlame original commit: 946b22e1e1f13143f162f0ad556160fcea1472d3

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -2666,33 +2666,6 @@ on
 emulator
 )
 [
-test_peerConnection_restrictBandwidthTargetBitrate
-.
-html
-]
-skip
--
-if
-=
-android_version
-=
-=
-'
-18
-'
-#
-android
-(
-Bug
-1189784
-timeouts
-on
-4
-.
-3
-emulator
-)
-[
 test_peerConnection_restrictBandwidthWithTias
 .
 html
@@ -3069,11 +3042,11 @@ skip
 -
 if
 =
-android_version
+toolkit
 =
 =
 '
-18
+android
 '
 #
 android
@@ -3086,6 +3059,14 @@ on
 .
 3
 emulator
+)
+android
+(
+Bug
+1409203
+failures
+on
+Autophone
 )
 [
 test_peerConnection_audioRenegotiationInactiveAnswer
