Backed out changeset e81517c2358c (bug 1305230)
UltraBlame original commit: 8434b1a6091f0fc06f1ef23e20dd3307da08a6c1

--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -38,9 +38,6 @@ html
 fileapi_chromeScript
 .
 js
-worker_fileReader
-.
-js
 !
 /
 dom
@@ -106,45 +103,22 @@ test_file_negative_date
 html
 ]
 [
-test_fileapi_basic
+test_fileapi
 .
 html
 ]
 [
-test_fileapi_encoding
+test_fileapi_worker
 .
 html
 ]
-[
-test_fileapi_twice
+support
+-
+files
+=
+worker_fileReader
 .
-html
-]
-[
-test_fileapi_other
-.
-html
-]
-[
-test_fileapi_basic_worker
-.
-html
-]
-[
-test_fileapi_encoding_worker
-.
-html
-]
-[
-test_fileapi_twice_worker
-.
-html
-]
-[
-test_fileapi_other_worker
-.
-html
-]
+js
 [
 test_fileapi_slice_realFile_1
 .
