Backed out changeset 7d032e676aef (bug 1400098)
UltraBlame original commit: d3782a04e8f10dea9692bbd3b19fdba155669833

--- a/dom/workers/test/mochitest.ini
+++ b/dom/workers/test/mochitest.ini
@@ -309,6 +309,12 @@ html
 websocket_https_worker
 .
 js
+worker_fileReader
+.
+js
+fileapi_chromeScript
+.
+js
 importScripts_3rdParty_worker
 .
 js
@@ -1108,6 +1114,20 @@ test_sharedWorker_lifetime
 .
 html
 ]
+[
+test_fileReader
+.
+html
+]
+skip
+-
+if
+=
+!
+debug
+#
+bug
+1400098
 [
 test_navigator_workers_hardwareConcurrency
 .
