--- a/dom/file/tests/mochitest.ini
+++ b/dom/file/tests/mochitest.ini
@@ -105,7 +105,7 @@ test_fileapi
 html
 ]
 [
-test_fileapi_slice_realFile_1
+test_fileapi_slice
 .
 html
 ]
@@ -127,51 +127,7 @@ Android
 Bug
 775227
 [
-test_fileapi_slice_realFile_2
-.
-html
-]
-skip
--
-if
-=
-(
-toolkit
-=
-=
-'
-android
-'
-)
-#
-Android
-:
-Bug
-775227
-[
-test_fileapi_slice_memFile_1
-.
-html
-]
-skip
--
-if
-=
-(
-toolkit
-=
-=
-'
-android
-'
-)
-#
-Android
-:
-Bug
-775227
-[
-test_fileapi_slice_memFile_2
+test_fileapi_slice2
 .
 html
 ]
