Bug 1405655 - Only hide Flash Activation overlay UI if the entire plugin is covered. r=dthayer
As opposed to right now where we hide if any of the corners or the center of the plugin is covered.

MozReview-Commit-ID: 9mOVXYyV1Il

UltraBlame original commit: a6aaaf9cb7d3a4f3baa430cfa88671f0acabed6c

--- a/browser/base/content/test/plugins/browser.ini
+++ b/browser/base/content/test/plugins/browser.ini
@@ -92,6 +92,9 @@ html
 plugin_simple_blank
 .
 swf
+plugin_shouldShowOverlay
+.
+html
 plugin_small
 .
 html
@@ -297,6 +300,11 @@ js
 tags
 =
 blocklist
+[
+browser_CTP_shouldShowOverlay
+.
+js
+]
 [
 browser_CTP_zoom
 .
