Bug 1409079: Re-enable web components in stylo. r=heycam,smaug
MozReview-Commit-ID: DJZRO7j2pOJ

UltraBlame original commit: a840d960ab75fec4dded619c668f52762194fc94

--- a/dom/tests/mochitest/webcomponents/mochitest.ini
+++ b/dom/tests/mochitest/webcomponents/mochitest.ini
@@ -26,14 +26,6 @@ test_bug1176757
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_bug1276240
 .
@@ -44,14 +36,6 @@ test_content_element
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_custom_element_adopt_callbacks
 .
@@ -110,17 +94,12 @@ skip
 if
 =
 true
-|
-|
-stylo
 #
 disabled
 -
 See
 bug
 1390396
-and
-1293844
 [
 test_custom_element_register_invalid_callbacks
 .
@@ -156,92 +135,36 @@ test_nested_content_element
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_dest_insertion_points
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_fallback_dest_insertion_points
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_detached_style
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_dynamic_content_element_matching
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_document_adoptnode
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_document_importnode
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_document_register
 .
@@ -299,27 +222,11 @@ test_event_retarget
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_event_stopping
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_template
 .
@@ -340,53 +247,21 @@ test_shadowroot
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_shadowroot_inert_element
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_shadowroot_style
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_shadowroot_style_order
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
 [
 test_style_fallback_content
 .
@@ -397,9 +272,12 @@ skip
 if
 =
 stylo
+&
+&
+debug
 #
 bug
-1293844
+1409088
 [
 test_unresolved_pseudo_class
 .
@@ -415,11 +293,3 @@ test_bug1269155
 .
 html
 ]
-skip
--
-if
-=
-stylo
-#
-bug
-1293844
