Bug 1407987 Part 3: Disable browser_visibleFindSelection.js for failing to automate properly. r=mikedeboer
MozReview-Commit-ID: GNwMz43Jm35

UltraBlame original commit: 3464e112b7d4e2be1a5900b7fa7c125f17226b5f

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -4968,6 +4968,23 @@ browser_visibleFindSelection
 .
 js
 ]
+skip
+-
+if
+=
+true
+#
+Bug
+1409184
+disabled
+because
+interactive
+find
+next
+is
+not
+automating
+properly
 #
 DO
 NOT
