Bug 1406209 - Use .taskcluster.yml for action tasks templates r=dustin,jonasfj
MozReview-Commit-ID: 8I8lIouV6KF

UltraBlame original commit: 215bc8a3310cde31dd6f09c72f8e5c84a904023f

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -51,11 +51,26 @@ cron
 decision
 .
 py
+#
+-
+action
+tasks
+-
+taskcluster
+/
+taskgraph
+/
+actions
+/
+registry
+.
+py
 version
 :
 1
 tasks
 :
+-
 let
 :
 #
@@ -177,8 +192,20 @@ url
 }
 in
 :
--
 taskId
+:
+{
+if
+:
+'
+tasks_for
+!
+=
+"
+action
+"
+'
+then
 :
 '
 {
@@ -190,7 +217,29 @@ decision
 )
 }
 '
+}
 taskGroupId
+:
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+'
+{
+action
+.
+taskGroupId
+}
+'
+else
 :
 '
 {
@@ -205,7 +254,7 @@ decision
 #
 same
 as
-tsakId
+taskId
 ;
 this
 is
@@ -343,6 +392,40 @@ graph
 '
 else
 :
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+name
+:
+"
+Action
+:
+{
+action
+.
+title
+}
+"
+description
+:
+'
+{
+action
+.
+description
+}
+'
+else
+:
 name
 :
 "
@@ -434,6 +517,34 @@ ownerEmail
 }
 "
 }
+else
+:
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+createdForUser
+:
+'
+{
+ownerEmail
+}
+'
+kind
+:
+'
+action
+-
+callback
+'
 routes
 :
 if
@@ -582,32 +693,6 @@ else
 :
 -
 "
-index
-.
-gecko
-.
-v2
-.
-{
-repository
-.
-project
-}
-.
-latest
-.
-firefox
-.
-decision
--
-{
-cron
-.
-job_name
-}
-"
--
-"
 tc
 -
 treeherder
@@ -660,6 +745,73 @@ push
 pushlog_id
 }
 "
+-
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+"
+index
+.
+gecko
+.
+v2
+.
+{
+repository
+.
+project
+}
+.
+pushlog
+-
+id
+.
+{
+push
+.
+pushlog_id
+}
+.
+actions
+.
+ownTaskId
+"
+else
+:
+"
+index
+.
+gecko
+.
+v2
+.
+{
+repository
+.
+project
+}
+.
+latest
+.
+firefox
+.
+decision
+-
+{
+cron
+.
+job_name
+}
+"
 scopes
 :
 if
@@ -707,6 +859,28 @@ ownerEmail
 }
 .
 *
+'
+else
+:
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+-
+'
+{
+action
+.
+repo_scope
+}
 '
 else
 :
@@ -777,6 +951,9 @@ the
 command
 line
 .
+merge
+:
+-
 GECKO_BASE_REPOSITORY
 :
 '
@@ -821,6 +998,19 @@ revision
 '
 GECKO_COMMIT_MSG
 :
+{
+if
+:
+'
+tasks_for
+!
+=
+"
+action
+"
+'
+then
+:
 '
 {
 push
@@ -828,6 +1018,7 @@ push
 comment
 }
 '
+}
 HG_STORE_PATH
 :
 /
@@ -848,6 +1039,89 @@ builds
 worker
 /
 checkouts
+-
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+ACTION_TASK_GROUP_ID
+:
+'
+{
+action
+.
+taskGroupId
+}
+'
+ACTION_TASK_ID
+:
+{
+json
+:
+{
+eval
+:
+'
+taskId
+'
+}
+}
+ACTION_TASK
+:
+{
+json
+:
+{
+eval
+:
+'
+task
+'
+}
+}
+ACTION_INPUT
+:
+{
+json
+:
+{
+eval
+:
+'
+input
+'
+}
+}
+ACTION_CALLBACK
+:
+'
+{
+action
+.
+cb_name
+}
+'
+ACTION_PARAMETERS
+:
+{
+json
+:
+{
+eval
+:
+'
+parameters
+'
+}
+}
 cache
 :
 level
@@ -1042,16 +1316,10 @@ tasks_for
 =
 =
 "
-hg
--
-push
+cron
 "
 '
 then
-:
-'
-'
-else
 :
 '
 {
@@ -1059,6 +1327,10 @@ cron
 .
 quoted_args
 }
+'
+else
+:
+'
 '
 }
 #
@@ -1110,6 +1382,58 @@ id
 =
 1383973
 in
+:
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+>
+cd
+/
+builds
+/
+worker
+/
+checkouts
+/
+gecko
+&
+&
+ln
+-
+s
+/
+builds
+/
+worker
+/
+artifacts
+artifacts
+&
+&
+.
+/
+mach
+-
+-
+log
+-
+no
+-
+times
+taskgraph
+action
+-
+callback
+else
 :
 >
 cd
@@ -1293,6 +1617,9 @@ year
 }
 extra
 :
+merge
+:
+-
 treeherder
 :
 merge
@@ -1325,6 +1652,39 @@ symbol
 D
 else
 :
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+groupName
+:
+'
+action
+-
+callback
+'
+groupSymbol
+:
+AC
+symbol
+:
+"
+{
+action
+.
+symbol
+}
+"
+else
+:
 groupSymbol
 :
 cron
@@ -1337,3 +1697,74 @@ cron
 job_symbol
 }
 "
+-
+if
+:
+'
+tasks_for
+=
+=
+"
+action
+"
+'
+then
+:
+parent
+:
+'
+{
+action
+.
+taskGroupId
+}
+'
+action
+:
+name
+:
+'
+{
+action
+.
+name
+}
+'
+context
+:
+taskGroupId
+:
+'
+{
+action
+.
+taskGroupId
+}
+'
+taskId
+:
+{
+eval
+:
+'
+taskId
+'
+}
+input
+:
+{
+eval
+:
+'
+input
+'
+}
+parameters
+:
+{
+eval
+:
+'
+parameters
+'
+}
