--- a/security/manager/ssl/tests/unit/xpcshell.ini
+++ b/security/manager/ssl/tests/unit/xpcshell.ini
@@ -125,6 +125,10 @@ test_sdr_preexisting
 /
 *
 *
+test_sdr_preexisting_with_password
+/
+*
+*
 test_signed_apps
 /
 *
@@ -798,6 +802,34 @@ test_sdr_preexisting
 .
 js
 ]
+[
+test_sdr_preexisting_with_password
+.
+js
+]
+#
+Not
+relevant
+to
+Android
+.
+See
+the
+comment
+in
+the
+test
+.
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
 [
 test_session_resumption
 .
