--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -1215,38 +1215,6 @@ sha256
 maxRunTime
 :
 1800
-#
-TODO
-use
-mozilla
--
-unified
-for
-the
-base
-repository
-once
-the
-tc
--
-vcs
-#
-tar
-.
-gz
-archives
-are
-created
-or
-tc
--
-vcs
-isn
-'
-t
-being
-used
-.
 command
 :
 -
@@ -1333,54 +1301,6 @@ else
 '
 '
 }
-#
-NOTE
-:
-the
-explicit
-reference
-to
-mozilla
--
-central
-below
-is
-required
-because
-android
--
-stuff
-#
-still
-uses
-tc
--
-vcs
-which
-does
-not
-support
-mozilla
--
-unified
-#
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1383973
 in
 :
 if
@@ -1539,21 +1459,9 @@ base
 -
 repository
 =
-'
-https
-:
-/
-/
-hg
-.
-mozilla
-.
-org
-/
-mozilla
--
-central
-'
+"
+GECKO_BASE_REPOSITORY
+"
 -
 -
 head
