Bug 1366644 - Part 1: Avoid deprecated Gradle features. r=maliu
MozReview-Commit-ID: LZ9clAsEUkd

UltraBlame original commit: ba0e40a0b33f21b78a17c46c5ce0d586c1a28ab6

--- a/mobile/android/gradle/with_gecko_binaries.gradle
+++ b/mobile/android/gradle/with_gecko_binaries.gradle
@@ -477,7 +477,8 @@ here
 .
 inputs
 .
-source
+file
+(
 project
 (
 '
@@ -493,6 +494,11 @@ main
 resources
 .
 srcDirs
+)
+.
+skipWhenEmpty
+(
+)
 /
 /
 Produce
@@ -755,8 +761,8 @@ fail
 }
 task
 checkLibsExistInDistDir
-<
-<
+{
+doLast
 {
 if
 (
@@ -796,6 +802,7 @@ packaged
 ?
 "
 )
+}
 }
 }
 task
@@ -840,8 +847,8 @@ lib
 }
 task
 checkAssetsExistInDistDir
-<
-<
+{
+doLast
 {
 if
 (
@@ -880,6 +887,7 @@ packaged
 ?
 "
 )
+}
 }
 }
 task
