Bug 1366644 - Part 3a: Update Android build-tools (25.0.3), Gradle (3.4.1), Android-Gradle (2.3.3). r=maliu
The goal is to use a newer Android-Gradle build plugin version (2.3.3
is latest stable).  That requires a modern Gradle (anything 3.3+, but
3.4.1 is the default from my Android Studio), and also a newer
build-tools (25.0.3 is latest stable).

The locations of lint output changed, and we want to use the standard
output location because it's difficult to accommodate variant details
in custom names.  We change the location of findbugs output to follow
suit.

This requires either:

- fixing lint errors
- adding to the lint whitelist
- using the new lint baseline

It's best to use the new lint baseline, which will happen in the next commit.

MozReview-Commit-ID: D19FzIDCJrE

UltraBlame original commit: 1c49a7a7cb5ecab97b2bd3a3384631e6718b748f

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -4437,7 +4437,7 @@ project
 .
 buildDir
 /
-outputs
+reports
 /
 findbugs
 /
@@ -4663,7 +4663,7 @@ project
 .
 buildDir
 /
-outputs
+reports
 /
 findbugs
 /
