Bug 1404525 - Schedule test-verify on Android, tier 3; r=jmaher
UltraBlame original commit: 55f3eaaf482d6b6c7c0574d179088607749a1ddb

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -367,14 +367,6 @@ threads
 talos
 -
 speedometer
--
-talos
--
-h1
--
-talos
--
-h2
 awsy
 :
 -
@@ -938,14 +930,6 @@ threads
 talos
 -
 speedometer
--
-talos
--
-h1
--
-talos
--
-h2
 windows
 -
 talos
@@ -1238,14 +1222,6 @@ threads
 talos
 -
 speedometer
--
-talos
--
-h1
--
-talos
--
-h2
 macosx64
 -
 talos
@@ -1520,6 +1496,10 @@ media
 -
 reftest
 -
+test
+-
+verify
+-
 xpcshell
 android
 -
@@ -1563,6 +1543,10 @@ chrome
 robocop
 -
 geckoview
+-
+test
+-
+verify
 android
 -
 x86
