--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -8622,336 +8622,6 @@ webServer
 localhost
 talos
 -
-h1
-:
-description
-:
-"
-Talos
-h1
-"
-suite
-:
-talos
-try
--
-name
-:
-h1
-treeherder
--
-symbol
-:
-tc
--
-T
-(
-h1
-)
-virtualization
-:
-hardware
-run
--
-on
--
-projects
-:
-by
--
-test
--
-platform
-:
-linux64
--
-qr
-/
-.
-*
-:
-[
-'
-mozilla
--
-central
-'
-'
-try
-'
-]
-default
-:
-[
-'
-mozilla
--
-beta
-'
-'
-mozilla
--
-central
-'
-'
-mozilla
--
-inbound
-'
-'
-autoland
-'
-'
-try
-'
-]
-max
--
-run
--
-time
-:
-3600
-mozharness
-:
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
-extra
--
-options
-:
--
--
--
-suite
-=
-h1
--
--
--
-add
--
-option
--
--
--
-webServer
-localhost
-talos
--
-h2
-:
-description
-:
-"
-Talos
-h2
-"
-suite
-:
-talos
-try
--
-name
-:
-h2
-treeherder
--
-symbol
-:
-tc
--
-T
-(
-h2
-)
-virtualization
-:
-hardware
-run
--
-on
--
-projects
-:
-by
--
-test
--
-platform
-:
-linux64
--
-qr
-/
-.
-*
-:
-[
-'
-mozilla
--
-central
-'
-'
-try
-'
-]
-default
-:
-[
-'
-mozilla
--
-beta
-'
-'
-mozilla
--
-central
-'
-'
-mozilla
--
-inbound
-'
-'
-autoland
-'
-'
-try
-'
-]
-max
--
-run
--
-time
-:
-3600
-mozharness
-:
-script
-:
-talos_script
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-talos
-/
-mac_config
-.
-py
-windows
-.
-*
-:
--
-talos
-/
-windows_config
-.
-py
-default
-:
--
-talos
-/
-linux_config
-.
-py
-extra
--
-options
-:
--
--
--
-suite
-=
-h2
--
--
--
-add
--
-option
--
--
--
-webServer
-localhost
-talos
--
 other
 :
 description
@@ -11823,6 +11493,11 @@ test
 -
 platform
 :
+android
+.
+*
+:
+3
 macosx
 .
 *
@@ -11848,9 +11523,27 @@ default
 2
 mozharness
 :
+by
+-
+test
+-
+platform
+:
+android
+.
+*
+:
 script
 :
-desktop_unittest
+android_emulator_unittest
+.
+py
+config
+:
+-
+android
+/
+androidarm_4_3
 .
 py
 no
@@ -11862,6 +11555,21 @@ buildbot
 config
 :
 true
+extra
+-
+options
+:
+-
+-
+-
+verify
+default
+:
+script
+:
+desktop_unittest
+.
+py
 config
 :
 by
@@ -11908,6 +11616,15 @@ py
 remove_executables
 .
 py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
 extra
 -
 options
