Bug 1366646 - Include borders and padding when calculating the offset of a window inside an (i)frame. r=jaws
MozReview-Commit-ID: 58fBRcw1lg3

UltraBlame original commit: b036ed8f647ade4a7a36afe889f95a11af1cece9

--- a/toolkit/modules/tests/browser/browser.ini
+++ b/toolkit/modules/tests/browser/browser.ini
@@ -18,6 +18,12 @@ html
 testremotepagemanager2
 .
 html
+file_FinderIframeTest
+.
+html
+file_FinderSample
+.
+html
 file_WebNavigation_page1
 .
 html
@@ -61,6 +67,9 @@ file_script_redirect
 .
 js
 file_script_xhr
+.
+js
+head
 .
 js
 WebRequest_dynamic
@@ -116,13 +125,23 @@ os
 "
 linux
 "
-support
--
-files
-=
-file_FinderSample
+[
+browser_FinderHighlighter2
 .
-html
+js
+]
+skip
+-
+if
+=
+debug
+|
+|
+os
+=
+"
+linux
+"
 [
 browser_Geometry
 .
