Bug 1408461 - Update webrender to commit 7892f5364bc4d35c7a9b42949f0ace4cc54f8b3c. r=jrmuizel
MozReview-Commit-ID: 1n7EzemevQX

UltraBlame original commit: dd8eb671df757dddd4b0975a75394bc86408b255

--- a/gfx/webrender/Cargo.toml
+++ b/gfx/webrender/Cargo.toml
@@ -112,6 +112,10 @@ serde
 serde_derive
 "
 ]
+query
+=
+[
+]
 [
 dependencies
 ]
@@ -219,9 +223,9 @@ webrender_api
 bitflags
 =
 "
-0
+1
 .
-9
+0
 "
 thread_profiler
 =
