Bug 1409617 - Convert test_ext_history_redirect.html to browser test and make it a bit robust. r=aswan
MozReview-Commit-ID: FKvBB01ntm4

UltraBlame original commit: 9dc7f40f4e218e009b27fe3e764232bbfa7f3512

--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -149,6 +149,34 @@ toolkit
 /
 components
 /
+extensions
+/
+test
+/
+mochitest
+/
+redirection
+.
+sjs
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+toolkit
+/
+components
+/
 reader
 /
 test
@@ -460,6 +488,11 @@ js
 ]
 [
 browser_ext_getViews
+.
+js
+]
+[
+browser_ext_history_redirect
 .
 js
 ]
