Bug 1409577 - Add static indexes to decision task r=dustin
UltraBlame original commit: 82ca05dc42e91a1be20877314541b57d13ec51a9

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -595,6 +595,32 @@ repository
 project
 }
 .
+revision
+.
+{
+push
+.
+revision
+}
+.
+firefox
+.
+decision
+"
+-
+"
+index
+.
+gecko
+.
+v2
+.
+{
+repository
+.
+project
+}
+.
 pushlog
 -
 id
